Removed RMIT Creds, added Important Dates, renamed Student Email

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@ sections:
         width: 1-1
         colour: orange
 
+      - name: Important Dates
+        url: https://www.rmit.edu.au/students/student-essentials/important-dates
+        width: 1-1
+        colour: orange
+
   - type: small
 
     body:
-
-      - name: RMIT Creds
-        url: https://www.rmit.edu.au/creds
-        width: 1-1
 
       - name: RMIT Connect
         url: https://rmit.service-now.com/connect/?id=rmit_index
@@ -44,7 +45,7 @@ sections:
         url: https://bookit.rmit.edu.au/
         width: 1-1
 
-      - name: Email
+      - name: Student Email
         url: https://mail.google.com/a/student.rmit.edu.au
         width: 1-1
 
