--- a/404.html
+++ b/404.html
@@ -1,12 +1,6 @@
 ---
-layout: default
+layout: 404
 title: 404
 permalink: /404.html
-hide-back-button: true
+error_message: This page doesn't exist.
 ---
-
-<div class="inner inner-bottom-padded links-body">
-    <div>This page doesn't exist.</div>
-    <br>
-    <div><a class="pure-button button-xlarge button-red" href="/">Home</a></div>
-</div>
