--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ sections:
         width: 1-1
         colour: green
 
-      - name: myTimetable 2022
-        url: https://mytimetable.rmit.edu.au/even/student
+      - name: myTimetable 2023
+        url: https://mytimetable.rmit.edu.au/odd/student
         width: 1-1
         colour: green
 
